<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="14dp">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scaleType="centerCrop"
        android:paddingTop="10dp"
        android:src="@drawable/ic_logo_7"
        android:contentDescription="@string/logo_image" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_user"
            android:contentDescription="@string/ic_user" />
        <EditText
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/username"
            android:id="@+id/edUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:autofillHints="no" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_width="24dp"
            android:layout_height="match_parent"
            android:src="@drawable/ic_password"/>
        <EditText
            android:textColor="@color/colorPrimaryDark"
            android:hint="@string/password"
            android:id="@+id/edPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword" />
    </LinearLayout>


    <Button
        android:layout_marginTop="8dp"
        android:textColor="@android:color/white"
        android:background="@drawable/btn_background"
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login" />
</LinearLayout>